--- a/Conf/sing-box/nginx.conf
+++ b/Conf/sing-box/nginx.conf
@@ -24,27 +24,33 @@ stream {
 	#正常网站，当443端口sni匹配到site.example.com，则转发到8001端口执行后续操作，此处为访问一个网站
     upstream site {
         server 127.0.0.1:8001;
+	server [::1]:8001;      # IPv6 地址
     }
 
 	#偷别人的证书，当443端口sni匹配到itunes.apple.com，则直接转发到8012端口执行后续操作，此处转发到sing-box监听的8012端口之后由reality回落到itunes.apple.com去偷证书
     upstream reality1 {
         server 127.0.0.1:8012;
+	server [::1]:8012;      # IPv6 地址
     }
     #偷自己的证书，当443端口sni匹配到reality.example.com，则直接转发到8013端口执行后续操作，此处转发到sing-box监听的8013端口之后由reality回落到自己的8003端口去偷reality.example.com的证书
     upstream reality2 {
         server 127.0.0.1:8013;
+	server [::1]:8013;      # IPv6 地址
     }
 
     upstream vlessws {
         server 127.0.0.1:8004;
+	server [::1]:8004;      # IPv6 地址
     }
         # 静态网页，对应下方
     upstream static {
         server 127.0.0.1:8005;
+	server [::1]:8005;  
     }
     # 静态网页，对应下方
     upstream files {
         server 127.0.0.1:8006;
+	server [::1]:8005;  
     }
     # 监听 443 并开启 ssl_preread,监听对应域名并转发
     server {
@@ -84,6 +90,7 @@ http {
     #正常网站443端口监听sni site.example.com之后跳转到8001端口在进行后续操作
     server {
         listen 8001 ssl http2;
+        listen [::]:8001 ssl http2;  # 同时监听 IPv6 地址
         ssl_certificate       /root/cert/site.example.com.cer;  # 证书位置，可以用泛域名证书
         ssl_certificate_key   /root/cert/site.example.com.key;  # 私钥位置
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -102,7 +109,7 @@ http {
     #偷取自己证书，和上文的reality2对应，这里监听8003端口，对应sing-box那边监听reality2那边的8013，然后回落到nginx这边的8003端口偷取这里reality.example.com的证书
     server {
         listen 8003 ssl http2;
-
+        listen [::]:8003 ssl http2;  # 同时监听 IPv6 地址
         ssl_certificate       /root/cert/reality.example.com.cer;  # 证书位置，可以用泛域名证书一劳永逸
         ssl_certificate_key   /root/cert/reality.example.com.key;  # 私钥位置
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -128,6 +135,7 @@ http {
     # vless ws tls的操作
     server {
             listen  8004 ssl http2;
+        listen [::]:8004 ssl http2;  # 同时监听 IPv6 地址
             ssl_certificate       /root/cert/vless.example.com.cer;  # 证书位置，可以用泛域名证书一劳永逸
             ssl_certificate_key   /root/cert/vless.example.com.key;  # 私钥位置
             
@@ -176,6 +184,7 @@ http {
     # 静态网页
     server {
         listen 8005 ssl http2;
+        listen [::]:8005 ssl http2;  # 同时监听 IPv6 地址
         server_name static.example.com;
         ssl_certificate /root/cert/cert.crt;
         ssl_certificate_key /root/cert/private.key;
@@ -192,6 +201,7 @@ http {
     #文件分享
     server {
     listen 8006 ssl http2;
+        listen [::]:8006 ssl http2;  # 同时监听 IPv6 地址
     server_name files.example.com;
     ssl_certificate /root/cert/cert.crt;
     ssl_certificate_key /root/cert/private.key;
